--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mercadopago": "^1.5.15",
     "mongoose": "^6.9.1",
     "socket.io": "^4.6.0",
     "stripe": "^11.10.0",
